--- a/03-Pandas/02-pandas-파일입출력-(실습).ipynb
+++ b/03-Pandas/02-pandas-파일입출력-(실습).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "id": "RGhyFtVF0F0m"
    },
@@ -2303,6 +2303,200 @@
    "source": [
     "# 코드를 입력해 주세요\n",
     "sample_202010.to_csv('data/sample_202010.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas-profiling\n",
+      "  Using cached pandas_profiling-3.6.6-py2.py3-none-any.whl (324 kB)\n",
+      "Collecting ydata-profiling\n",
+      "  Using cached ydata_profiling-4.1.0-py2.py3-none-any.whl (344 kB)\n",
+      "Requirement already satisfied: jinja2<3.2,>=2.11.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from ydata-profiling->pandas-profiling) (3.1.2)\n",
+      "Requirement already satisfied: PyYAML<6.1,>=5.0.0 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from ydata-profiling->pandas-profiling) (6.0)\n",
+      "Requirement already satisfied: tqdm<4.65,>=4.48.2 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from ydata-profiling->pandas-profiling) (4.64.1)\n",
+      "Requirement already satisfied: typeguard<2.14,>=2.13.2 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from ydata-profiling->pandas-profiling) (2.13.3)\n",
+      "Collecting statsmodels<0.14,>=0.13.2\n",
+      "  Using cached statsmodels-0.13.5-cp38-cp38-win_amd64.whl (9.2 MB)\n",
+      "Collecting imagehash==4.3.1\n",
+      "  Using cached ImageHash-4.3.1-py2.py3-none-any.whl (296 kB)\n",
+      "Collecting visions[type_image_path]==0.7.5\n",
+      "  Using cached visions-0.7.5-py3-none-any.whl (102 kB)\n",
+      "Collecting scipy<1.10,>=1.4.1\n",
+      "  Using cached scipy-1.9.3-cp38-cp38-win_amd64.whl (39.8 MB)\n",
+      "Collecting matplotlib<3.7,>=3.2\n",
+      "  Using cached matplotlib-3.6.3-cp38-cp38-win_amd64.whl (7.2 MB)\n",
+      "Collecting numpy<1.24,>=1.16.0\n",
+      "  Using cached numpy-1.23.5-cp38-cp38-win_amd64.whl (14.7 MB)\n",
+      "Requirement already satisfied: pandas!=1.4.0,<1.6,>1.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from ydata-profiling->pandas-profiling) (1.5.3)\n",
+      "Requirement already satisfied: requests<2.29,>=2.24.0 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from ydata-profiling->pandas-profiling) (2.28.2)\n",
+      "Collecting pydantic<1.11,>=1.8.1\n",
+      "  Using cached pydantic-1.10.6-cp38-cp38-win_amd64.whl (2.2 MB)\n",
+      "Collecting multimethod<1.10,>=1.4\n",
+      "  Using cached multimethod-1.9.1-py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: htmlmin==0.1.12 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from ydata-profiling->pandas-profiling) (0.1.12)\n",
+      "Collecting phik<0.13,>=0.11.1\n",
+      "  Using cached phik-0.12.3-cp38-cp38-win_amd64.whl (663 kB)\n",
+      "Requirement already satisfied: seaborn<0.13,>=0.10.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from ydata-profiling->pandas-profiling) (0.12.2)\n",
+      "Requirement already satisfied: pillow in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from imagehash==4.3.1->ydata-profiling->pandas-profiling) (9.4.0)\n",
+      "Collecting PyWavelets\n",
+      "  Using cached PyWavelets-1.4.1-cp38-cp38-win_amd64.whl (4.2 MB)\n",
+      "Requirement already satisfied: attrs>=19.3.0 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from visions[type_image_path]==0.7.5->ydata-profiling->pandas-profiling) (22.2.0)\n",
+      "Collecting networkx>=2.4\n",
+      "  Using cached networkx-3.0-py3-none-any.whl (2.0 MB)\n",
+      "Requirement already satisfied: tangled-up-in-unicode>=0.0.4 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from visions[type_image_path]==0.7.5->ydata-profiling->pandas-profiling) (0.2.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from jinja2<3.2,>=2.11.1->ydata-profiling->pandas-profiling) (2.1.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from matplotlib<3.7,>=3.2->ydata-profiling->pandas-profiling) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from matplotlib<3.7,>=3.2->ydata-profiling->pandas-profiling) (23.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from matplotlib<3.7,>=3.2->ydata-profiling->pandas-profiling) (3.0.9)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from matplotlib<3.7,>=3.2->ydata-profiling->pandas-profiling) (0.11.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from matplotlib<3.7,>=3.2->ydata-profiling->pandas-profiling) (2.8.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from matplotlib<3.7,>=3.2->ydata-profiling->pandas-profiling) (1.0.7)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from matplotlib<3.7,>=3.2->ydata-profiling->pandas-profiling) (4.39.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from pandas!=1.4.0,<1.6,>1.1->ydata-profiling->pandas-profiling) (2022.7.1)\n",
+      "Requirement already satisfied: joblib>=0.14.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from phik<0.13,>=0.11.1->ydata-profiling->pandas-profiling) (1.2.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from pydantic<1.11,>=1.8.1->ydata-profiling->pandas-profiling) (4.5.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from requests<2.29,>=2.24.0->ydata-profiling->pandas-profiling) (3.1.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from requests<2.29,>=2.24.0->ydata-profiling->pandas-profiling) (1.26.14)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from requests<2.29,>=2.24.0->ydata-profiling->pandas-profiling) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from requests<2.29,>=2.24.0->ydata-profiling->pandas-profiling) (2022.12.7)\n",
+      "Collecting patsy>=0.5.2\n",
+      "  Using cached patsy-0.5.3-py2.py3-none-any.whl (233 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from tqdm<4.65,>=4.48.2->ydata-profiling->pandas-profiling) (0.4.6)\n",
+      "Requirement already satisfied: six in c:\\users\\user\\anaconda3\\envs\\db\\lib\\site-packages (from patsy>=0.5.2->statsmodels<0.14,>=0.13.2->ydata-profiling->pandas-profiling) (1.16.0)\n",
+      "Installing collected packages: pydantic, numpy, networkx, multimethod, scipy, PyWavelets, patsy, visions, statsmodels, matplotlib, imagehash, phik, ydata-profiling, pandas-profiling\n",
+      "  Attempting uninstall: numpy\n",
+      "    Found existing installation: numpy 1.24.2\n",
+      "    Uninstalling numpy-1.24.2:\n",
+      "      Successfully uninstalled numpy-1.24.2\n",
+      "  Attempting uninstall: scipy\n",
+      "    Found existing installation: scipy 1.10.1\n",
+      "    Uninstalling scipy-1.10.1:\n",
+      "      Successfully uninstalled scipy-1.10.1\n",
+      "  Attempting uninstall: matplotlib\n",
+      "    Found existing installation: matplotlib 3.7.1\n",
+      "    Uninstalling matplotlib-3.7.1:\n",
+      "      Successfully uninstalled matplotlib-3.7.1\n",
+      "Successfully installed PyWavelets-1.4.1 imagehash-4.3.1 matplotlib-3.6.3 multimethod-1.9.1 networkx-3.0 numpy-1.23.5 pandas-profiling-3.6.6 patsy-0.5.3 phik-0.12.3 pydantic-1.10.6 scipy-1.9.3 statsmodels-0.13.5 visions-0.7.5 ydata-profiling-4.1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_9916\\2861664380.py:2: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
+      "  import pandas_profiling\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -U pandas-profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대중교통구분</th>\n",
+       "      <th>노선명</th>\n",
+       "      <th>년월</th>\n",
+       "      <th>승차총승객수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>지하철</td>\n",
+       "      <td>1호선</td>\n",
+       "      <td>201711</td>\n",
+       "      <td>8633618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>지하철</td>\n",
+       "      <td>1호선</td>\n",
+       "      <td>201712</td>\n",
+       "      <td>8737235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>지하철</td>\n",
+       "      <td>1호선</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>8145989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>지하철</td>\n",
+       "      <td>1호선</td>\n",
+       "      <td>201802</td>\n",
+       "      <td>7273309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>지하철</td>\n",
+       "      <td>1호선</td>\n",
+       "      <td>201803</td>\n",
+       "      <td>8692551</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  대중교통구분  노선명      년월   승차총승객수\n",
+       "0    지하철  1호선  201711  8633618\n",
+       "1    지하철  1호선  201712  8737235\n",
+       "2    지하철  1호선  201801  8145989\n",
+       "3    지하철  1호선  201802  7273309\n",
+       "4    지하철  1호선  201803  8692551"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "excel = pd.read_excel('data/seoul_transportation.xlsx', sheet_name='철도')\n",
+    "excel.head()"
    ]
   },
   {
